--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "bun install",
-  "installCommand": "curl -fsSL https://bun.sh/install | bash && bun install",
   "framework": null,
-  "outputDirectory": ".",
   "env": {
     "LLM_MODE": "api"
   },
@@ -11,5 +8,11 @@
     "env": {
       "LLM_MODE": "api"
     }
-  }
+  },
+  "rewrites": [
+    {
+      "source": "/",
+      "destination": "/api/index"
+    }
+  ]
 }
